[package]
name = "zeph-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Task orchestration: DAG execution, failure propagation, and persistence for Zeph"
readme = "README.md"

[dependencies]
blake3.workspace = true
dirs.workspace = true
parking_lot.workspace = true
rand.workspace = true
rand_distr.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

zeph-common.workspace = true
zeph-config.workspace = true
zeph-db.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-sanitizer.workspace = true
zeph-subagent.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zeph-llm = { workspace = true, features = ["testing"] }

[features]
sqlite = ["zeph-db/sqlite", "zeph-memory/sqlite"]
postgres = ["zeph-db/postgres", "zeph-memory/postgres"]
default = ["sqlite"]

[lints]
workspace = true
