[package]
name = "zeph-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Plugin packaging, installation, and management for Zeph"
readme = "README.md"

[dependencies]
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir = { workspace = true }
zeph-common.workspace = true
zeph-config.workspace = true
zeph-skills.workspace = true
zeph-tools.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
