[package]
name = "zeph-sanitizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Content sanitization, exfiltration guard, PII filtering, and quarantine for Zeph"
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
regex.workspace = true
zeph-config.workspace = true
zeph-common.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-tools.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
zeph-llm = { workspace = true, features = ["testing"] }

[features]
default = []
classifiers = ["zeph-llm/classifiers"]

[lints]
workspace = true
