[package]
name = "zeph-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Cron-based periodic task scheduler with SQLite persistence for Zeph"
readme = "README.md"

[dependencies]
chrono = { workspace = true, features = ["std", "clock"] }
cron.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
semver.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlite"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true

[lints]
workspace = true
