[package]
name = "zeph-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Cron-based periodic task scheduler with SQLite persistence for Zeph"
readme = "README.md"

[features]
## Enable Unix daemon lifecycle: `PidFile`, `detach_and_run`, and `run_foreground`.
##
## Pulls in `rustix` (fs + process features) for advisory file locking.
## Only meaningful on Unix targets; daemon code is `#[cfg(unix)]`-gated.
daemon = ["dep:rustix"]
sqlite = ["zeph-db/sqlite"]
postgres = ["zeph-db/postgres"]
default = ["sqlite"]

[dependencies]
chrono = { workspace = true, features = ["std", "clock"] }
cron.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
rustix = { workspace = true, features = ["fs", "process", "std"], optional = true }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
zeph-db.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true

[lints]
workspace = true
