[package]
name = "zeph-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SKILL.md parser, registry, embedding matcher, and hot-reload for Zeph"
readme = "README.md"

[features]
default = []

[dependencies]
blake3.workspace = true
futures.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
regex.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v5"] }
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-tools.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[[bench]]
name = "matcher"
harness = false

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-test.workspace = true

[lints]
workspace = true
