[package]
name = "zeph-subagent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://bug-ops.github.io/zeph/"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
description = "Subagent management: spawning, grants, transcripts, and lifecycle hooks for Zeph"

[dependencies]
dirs.workspace = true
regex.workspace = true
serde_norway.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeph-config.workspace = true
zeph-llm.workspace = true
zeph-skills.workspace = true
zeph-tools.workspace = true

[dev-dependencies]
indoc.workspace = true
proptest.workspace = true
schemars.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zeph-llm.workspace = true

[lints]
workspace = true
