[package]
name = "zeph-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Tool executor trait with shell, web scrape, and composite executors for Zeph"
readme = "README.md"

[dependencies]
dirs.workspace = true
glob.workspace = true
globset.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
schemars.workspace = true
scrape-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-md.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
unicode-normalization.workspace = true
url.workspace = true
zeph-common = { workspace = true, features = ["treesitter"] }
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
wiremock.workspace = true

[features]
default = []

[lints]
workspace = true
