[package]
name = "zeph-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Ratatui-based TUI dashboard with real-time metrics for Zeph"
readme = "README.md"

[dependencies]
ignore.workspace = true
indexmap.workspace = true
nucleo-matcher.workspace = true
chrono = { workspace = true, features = ["clock"] }
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
regex.workspace = true
thiserror.workspace = true
similar.workspace = true
throbber-widgets-tui.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
unicode-width.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tracing.workspace = true
serde_json.workspace = true
zeph-common.workspace = true
zeph-core.workspace = true
zeph-subagent.workspace = true
base64.workspace = true
arboard = { workspace = true, optional = true }

[dev-dependencies]
expectrl.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
cocoon = []

[lints]
workspace = true
